toolchain/internal/core/analysis/testdata/errors/patterns/unclosed_placeholder.ufo
// @expect: E401

pattern Invalid = "events.{userId"
